<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toppings">Toppings</string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream - $1</string>
    <string name="chocolate">Chocolate - $2</string>
    <string name="quantity_text">Quantity</string>
    <string name="quantity">2</string>
    <string name="price_per_cup">$5 per cup</string>
    <string name="order_summary_text">Order Summary</string>
    <string name="order_summary">$10</string>
    <string name="order">Order</string>
    <string name="order_name">Name: <xliff:g id="name" example="Mary">%1$s</xliff:g></string>
    <string name="order_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_whipped_cream">Add whipped cream? <xliff:g id="whipped" example="true">%b</xliff:g></string>
    <string name="order_chocolate">Add chocolate? <xliff:g id="chocolate" example="true">%b</xliff:g></string>
    <string name="order_total">Total: $<xliff:g id="price" example="$15">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much_coffee_toast">That\'s too much coffee ma dude</string>
    <string name="too_little_coffee_toast">We don\'t deliver empty cups ma dude</string>
    <string name="order_summary_email_subject"><xliff:g id="name" example="Amy">%s</xliff:g>\'s Coffee Order</string>
</resources>
